## Internal headers - not to be installed
nobase_dist_noinst_HEADERS = 
## Public headers - to be installed
nobase_pkginclude_HEADERS = 


## Rivet interface
nobase_pkginclude_HEADERS += \
  Rivet.hh             Exceptions.hh \
  RivetBoost.hh        RivetHepMC.hh \
  Constraints.hh       BeamConstraint.hh \
  Event.hh             Event.fhh \
  ParticleBase.hh      Jet.hh \
  Particle.hh          Particle.fhh \
  RivetAIDA.hh         RivetAIDA.fhh \
  Analysis.hh          Analysis.fhh \
  AnalysisHandler.hh   AnalysisHandler.fhh \
  AnalysisInfo.hh      ProjectionHandler.hh \
  ProjectionApplier.hh ProjectionApplier.fhh \
  Projection.hh        Projection.fhh \
  Cmp.hh               Cmp.fhh \
  ParticleName.hh      AnalysisLoader.hh \
  HistoHandler.hh      HistoFormat.hh


nobase_pkginclude_HEADERS += \
  Config/RivetConfig.hh \
  Config/BuildOptions.hh


## Standard analyses
nobase_dist_noinst_HEADERS += \
  Analyses/OPAL_1998_S3780481.hh \
  Analyses/OPAL_2004_S6132243.hh \
  Analyses/ZEUS_2001_S4815815.hh \
  Analyses/MC_JetAnalysis.hh


## Projections
nobase_pkginclude_HEADERS +=   \
  Projections/AxesDefinition.hh \
  Projections/Beam.hh           \
  Projections/CentralEtHCM.hh   \
  Projections/ChargedFinalState.hh \
  Projections/ChargedLeptons.hh \
  Projections/ClusteredPhotons.hh \
  Projections/DISKinematics.hh  \
  Projections/DISLepton.hh      \
  Projections/FastJets.hh       \
  Projections/FinalState.hh     \
  Projections/FinalStateHCM.hh  \
  Projections/FoxWolframMoments.hh \
  Projections/HadronicFinalState.hh \
  Projections/Hemispheres.hh    \
  Projections/IdentifiedFinalState.hh \
  Projections/InitialQuarks.hh \
  Projections/InvMassFinalState.hh \
  Projections/IsolationEstimators.hh \
  Projections/IsolationProjection.hh \
  Projections/IsolationTools.hh \
  Projections/JetAlg.hh         \
  Projections/JetShape.hh       \
  Projections/KtJets.hh         \
  Projections/LeadingParticlesFinalState.hh \
  Projections/LossyFinalState.hh \
  Projections/Multiplicity.hh   \
  Projections/ParisiTensor.hh   \
  Projections/PVertex.hh        \
  Projections/Sphericity.hh     \
  Projections/SVertex.hh	    \
  Projections/Thrust.hh         \
  Projections/TotalVisibleMomentum.hh \
  Projections/UnstableFinalState.hh \
  Projections/VetoedFinalState.hh \
  Projections/VisibleFinalState.hh \
  Projections/ZFinder.hh 


## Tools
nobase_pkginclude_HEADERS += \
  Tools/Logging.hh  \
  Tools/Logging.fhh \
  Tools/Configuration.hh \
  Tools/Utils.hh \
  Tools/BinnedHistogram.hh \
  Tools/ParticleIDMethods.hh \
  Tools/TypeTraits.hh
nobase_dist_noinst_HEADERS += \
  Tools/osdir.hh

nobase_pkginclude_HEADERS += \
  Math/Matrices.hh \
  Math/Vector3.hh \
  Math/VectorN.hh \
  Math/MatrixN.hh \
  Math/MatrixDiag.hh \
  Math/MathHeader.hh \
  Math/Vectors.hh \
  Math/LorentzTrans.hh \
  Math/Matrix3.hh \
  Math/MathUtils.hh \
  Math/Vector4.hh \
  Math/Math.hh \
  Math/Units.hh \
  Math/Constants.hh \
  Math/eigen/util.h \
  Math/eigen/regressioninternal.h \
  Math/eigen/regression.h \
  Math/eigen/vector.h \
  Math/eigen/ludecompositionbase.h \
  Math/eigen/ludecomposition.h \
  Math/eigen/linearsolver.h \
  Math/eigen/linearsolverbase.h \
  Math/eigen/matrix.h \
  Math/eigen/vectorbase.h \
  Math/eigen/projective.h \
  Math/eigen/matrixbase.h 
