AUTOMAKE_OPTIONS = -Wno-portability

## Flags for building all plugins
AM_LDFLAGS = $(LDFLAGS) -module -avoid-version -L$(FASTJETLIBPATH)
LIBS = $(FASTJETCONFIGLIBADD)
lib_LTLIBRARIES =

BUILT_SOURCES =
DISTCLEANFILES =

EXTRA_DIST = cat_with_lines

noinst_LTLIBRARIES = libRivetAnalysisTools.la
libRivetAnalysisTools_la_SOURCES = \
    MC_ParticleAnalysis.cc \
    MC_JetAnalysis.cc \
    MC_JetSplittings.cc

%__all.cc :
	$(srcdir)/cat_with_lines $^ > $@

if ENABLE_ANALYSES

lib_LTLIBRARIES += RivetALICEAnalyses.la

nodist_RivetALICEAnalyses_la_SOURCES = ALICE__all.cc
BUILT_SOURCES += ALICE__all.cc
DISTCLEANFILES += ALICE__all.cc

ALICE__all.cc : $(ALICE_ALL)

EXTRA_DIST += $(ALICE_ALL)

ALICE_ALL = \
    ALICE_2010_S8624100.cc \
    ALICE_2010_S8625980.cc \
    ALICE_2010_S8706239.cc \
    ALICE_2011_S8909580.cc \
    ALICE_2011_S8945144.cc \
    ALICE_2012_I1116147.cc \
    ALICE_2012_I1181770.cc \
    ALICE_2014_I1300380.cc \
    ALICE_2015_I1357424.cc


lib_LTLIBRARIES += RivetATLASAnalyses.la

nodist_RivetATLASAnalyses_la_SOURCES = ATLAS_1__all.cc ATLAS_2__all.cc
BUILT_SOURCES += ATLAS_1__all.cc ATLAS_2__all.cc
DISTCLEANFILES += ATLAS_1__all.cc ATLAS_2__all.cc

ATLAS_1__all.cc : $(ATLAS_ALL_1)
ATLAS_2__all.cc : $(ATLAS_ALL_2)

EXTRA_DIST += $(ATLAS_ALL_1) $(ATLAS_ALL_2)

ATLAS_ALL_1 = \
    ATLAS_2010_S8591806.cc \
    ATLAS_2010_S8817804.cc \
    ATLAS_2010_S8894728.cc \
    ATLAS_2010_S8914702.cc \
    ATLAS_2010_S8918562.cc \
    ATLAS_2010_S8919674.cc \
    ATLAS_2011_S8924791.cc \
    ATLAS_2011_S8971293.cc \
    ATLAS_2011_S8994773.cc \
    ATLAS_2011_S8983313.cc \
    ATLAS_2011_S9002537.cc \
    ATLAS_2011_S9120807.cc \
    ATLAS_2011_S9126244.cc \
    ATLAS_2011_S9128077.cc \
    ATLAS_2011_S9131140.cc \
    ATLAS_2011_S9212183.cc \
    ATLAS_2011_S9225137.cc \
    ATLAS_2011_S9019561.cc \
    ATLAS_2011_I894867.cc \
    ATLAS_2011_I919017.cc \
    ATLAS_2011_I921594.cc \
    ATLAS_2011_I925932.cc \
    ATLAS_2011_I926145.cc \
    ATLAS_2011_I929691.cc \
    ATLAS_2011_I930220.cc \
    ATLAS_2011_I944826.cc \
    ATLAS_2011_I945498.cc \
    ATLAS_2011_I954993.cc \
    ATLAS_2011_I928289_W.cc \
    ATLAS_2011_I928289_Z.cc \
    ATLAS_2011_S9035664.cc \
    ATLAS_2012_I943401.cc \
    ATLAS_2012_I1082009.cc \
    ATLAS_2012_I1082936.cc \
    ATLAS_2012_I1083318.cc \
    ATLAS_2012_I1084540.cc \
    ATLAS_2012_I1091481.cc \
    ATLAS_2012_I1093734.cc \
    ATLAS_2012_I1093738.cc \
    ATLAS_2012_I1094564.cc \
    ATLAS_2012_I1094568.cc \
    ATLAS_2012_I1112263.cc \
    ATLAS_2012_I1117704.cc \
    ATLAS_2012_I1118269.cc \
    ATLAS_2012_I1119557.cc \
    ATLAS_2012_I1124167.cc \
    ATLAS_2012_I1125575.cc \
    ATLAS_2012_I1125961.cc \
    ATLAS_2012_I1183818.cc \
    ATLAS_2012_I1188891.cc \
    ATLAS_2012_I1199269.cc \
    ATLAS_2012_I1203852.cc \
    ATLAS_2012_I1204447.cc \
    ATLAS_2012_I1204784.cc \
    ATLAS_2013_I1190187.cc \
    ATLAS_2013_I1217867.cc \
    ATLAS_2013_I1219109.cc \
    ATLAS_2013_I1230812.cc \
    ATLAS_2013_I1234228.cc \
    ATLAS_2013_I1243871.cc \
    ATLAS_2013_I1263495.cc \
    ATLAS_2014_I1268975.cc \
    ATLAS_2014_I1279489.cc \
    ATLAS_2014_I1282441.cc \
    ATLAS_2014_I1298811.cc \
    ATLAS_2014_I1304688.cc \
    ATLAS_2014_I1307756.cc \
    ATLAS_2014_I1306294.cc \
    ATLAS_2014_I1315949.cc \
    ATLAS_2014_I1325553.cc \
    ATLAS_2014_I1300647.cc \
    ATLAS_2014_I1288706.cc \
    ATLAS_2014_I1307243.cc \
    ATLAS_2014_I1312627.cc

ATLAS_ALL_2 = \
    ATLAS_2013_I1217863_W.cc \
    ATLAS_2013_I1217863_Z.cc \
    ATLAS_2014_I1306615.cc \
    ATLAS_2013_I1216670.cc \
    ATLAS_2013_I1244522.cc \
    ATLAS_2014_I1282447.cc \
    ATLAS_2014_I1298023.cc \
    ATLAS_2014_I1319490.cc \
    ATLAS_2014_I1326641.cc \
    ATLAS_2014_I1327229.cc \
    ATLAS_2015_I1345452.cc \
    ATLAS_2015_I1351916.cc \
    ATLAS_2015_I1364361.cc \
    ATLAS_2015_I1376945.cc \
    ATLAS_2015_I1387176.cc \
    ATLAS_2015_I1390114.cc \
    ATLAS_2015_I1393758.cc \
    ATLAS_2015_I1394679.cc \
    ATLAS_2015_I1394865.cc \
    ATLAS_2015_I1397635.cc \
    ATLAS_2015_I1397637.cc \
    ATLAS_2015_I1404878.cc \
    ATLAS_2015_I1408516.cc \
    ATLAS_2016_I1419070.cc \
    ATLAS_2016_I1419652.cc \
    ATLAS_2016_I1424838.cc \
    ATLAS_2016_I1426515.cc \
    ATLAS_2016_I1426695.cc \
    ATLAS_2016_I1444991.cc \
    ATLAS_2016_I1448301.cc \
    ATLAS_2016_I1449082.cc \
    ATLAS_2016_I1452559.cc \
    ATLAS_2016_I1457605.cc \
    ATLAS_2016_I1458270.cc \
    ATLAS_2016_I1468168.cc \
    ATLAS_2016_I1467230.cc \
    ATLAS_2016_I1467454.cc \
    ATLAS_2016_I1468167.cc \
    ATLAS_2016_I1479760.cc \
    ATLAS_2016_CONF_2016_092.cc \
    ATLAS_2016_I1492320_2l2j.cc \
    ATLAS_2016_I1492320_3l.cc \
    ATLAS_2017_I1509919.cc \
    ATLAS_2017_I1589844.cc \
    ATLAS_2017_I1591327.cc \
    ATLAS_2017_I1514251.cc 

# PRELIMINARY / OBSOLETE
ATLAS_ALL_2 += \
    ATLAS_2012_CONF_2012_001.cc \
    ATLAS_2010_CONF_2010_049.cc \
    ATLAS_2011_CONF_2011_090.cc \
    ATLAS_2011_CONF_2011_098.cc \
    ATLAS_2012_CONF_2012_103.cc \
    ATLAS_2012_CONF_2012_104.cc \
    ATLAS_2012_CONF_2012_105.cc \
    ATLAS_2012_CONF_2012_109.cc \
    ATLAS_2012_CONF_2012_153.cc \
    ATLAS_2015_CONF_2015_041.cc \
    ATLAS_2016_CONF_2016_037.cc \
    ATLAS_2016_CONF_2016_054.cc \
    ATLAS_2016_CONF_2016_078.cc \
    ATLAS_2016_CONF_2016_094.cc \
    ATLAS_2011_S9041966.cc \
    ATLAS_2011_S9212353.cc \
    ATLAS_2012_I946427.cc
# UNVALIDATED
ATLAS_ALL_2 += \
    ATLAS_2011_S9108483.cc \
    ATLAS_2012_I1095236.cc \
    ATLAS_2012_I1126136.cc \
    ATLAS_2012_I1180197.cc \
    ATLAS_2012_I1186556.cc \
    ATLAS_2012_I1190891.cc


lib_LTLIBRARIES += RivetCMSAnalyses.la

nodist_RivetCMSAnalyses_la_SOURCES = CMS__all.cc
BUILT_SOURCES += CMS__all.cc
DISTCLEANFILES += CMS__all.cc

CMS__all.cc : $(CMS_ALL)

EXTRA_DIST += $(CMS_ALL)



CMS_ALL = \
    CMS_2010_S8547297.cc \
    CMS_2010_S8656010.cc \
    CMS_2011_S8884919.cc \
    CMS_2011_S8941262.cc \
    CMS_2011_S8950903.cc \
    CMS_2011_S8957746.cc \
    CMS_2011_S8968497.cc \
    CMS_2011_S8973270.cc \
    CMS_2011_S8978280.cc \
    CMS_2011_S9086218.cc \
    CMS_2011_S9088458.cc \
    CMS_2011_S9120041.cc \
    CMS_2011_S9215166.cc \
    CMS_2012_I941555.cc  \
    CMS_2011_I954992.cc  \
    CMS_2012_I1087342.cc \
    CMS_2012_I1090423.cc \
    CMS_2012_I1102908.cc \
    CMS_2012_I1107658.cc \
    CMS_2012_I1184941.cc \
    CMS_2012_I1193338.cc \
    CMS_2013_I1122847.cc \
    CMS_2013_I1208923.cc \
    CMS_2013_I1209721.cc \
    CMS_2013_I1218372.cc \
    CMS_2013_I1223519.cc \
    CMS_2013_I1224539_DIJET.cc \
    CMS_2013_I1224539_WJET.cc \
    CMS_2013_I1224539_ZJET.cc \
    CMS_2013_I1256943.cc \
    CMS_2013_I1258128.cc \
    CMS_2013_I1261026.cc \
    CMS_2013_I1265659.cc \
    CMS_2013_I1272853.cc \
    CMS_2013_I1273574.cc \
    CMS_2012_I1298807.cc \
    CMS_2014_I1298810.cc \
    CMS_2014_I1303894.cc \
    CMS_2014_I1305624.cc \
    CMS_2015_I1310737.cc \
    CMS_2015_I1327224.cc \
    CMS_2015_I1346843.cc \
    CMS_2015_I1356998.cc \
    CMS_2015_I1370682.cc \
    CMS_2015_I1370682_PARTON.cc \
    CMS_2015_I1380605.cc \
    CMS_2015_I1384119.cc \
    CMS_2015_I1385107.cc \
    CMS_2015_I1397174.cc \
    CMS_2016_I1413748.cc \
    CMS_2016_I1421646.cc \
    CMS_2016_I1430892.cc \
    CMS_2016_I1454211.cc \
    CMS_2016_I1459051.cc \
    CMS_2016_I1473674.cc \
    CMS_2016_I1486238.cc \
    CMS_2017_I1511284.cc \
    CMS_2017_I1518399.cc \
    CMS_2017_I1519995.cc \
    CMSTOTEM_2014_I1294140.cc \
    TOTEM_2014_I1328627.cc
# PRELIMINARY
CMS_ALL += \
    CMS_2010_PAS_QCD_10_024.cc \
    CMS_2012_PAS_QCD_11_010.cc \
    CMS_2012_PAS_FSQ_12_020.cc \
    CMS_2016_PAS_SUS_16_14.cc


lib_LTLIBRARIES += RivetLHCbAnalyses.la

nodist_RivetLHCbAnalyses_la_SOURCES = LHCb__all.cc
BUILT_SOURCES += LHCb__all.cc
DISTCLEANFILES += LHCb__all.cc

LHCb__all.cc : $(LHCb_ALL)

EXTRA_DIST += $(LHCb_ALL)

LHCb_ALL = \
    LHCB_2010_I867355.cc \
    LHCB_2010_S8758301.cc \
    LHCB_2011_I917009.cc \
    LHCB_2011_I919315.cc \
    LHCB_2012_I1119400.cc \
    LHCB_2012_I1208102.cc \
    LHCB_2013_I1218996.cc \
    LHCB_2013_I1208105.cc \
    LHCB_2014_I1262703.cc \
    LHCB_2014_I1281685.cc \
    LHCB_2015_I1333223.cc


lib_LTLIBRARIES += RivetLHCfAnalyses.la
RivetLHCfAnalyses_la_SOURCES = \
    LHCF_2012_I1115479.cc


lib_LTLIBRARIES += RivetTOTEMAnalyses.la
RivetTOTEMAnalyses_la_SOURCES = \
    TOTEM_2012_I1115294.cc \
    TOTEM_2012_I1220862.cc


lib_LTLIBRARIES += RivetCDFAnalyses.la

nodist_RivetCDFAnalyses_la_SOURCES = CDF__all.cc
BUILT_SOURCES += CDF__all.cc
DISTCLEANFILES += CDF__all.cc

CDF__all.cc : $(CDF_ALL)

EXTRA_DIST += $(CDF_ALL)



CDF_ALL = \
    CDF_1988_S1865951.cc \
    CDF_1990_S2089246.cc \
    CDF_1994_S2952106.cc \
    CDF_1996_S3418421.cc \
    CDF_1998_S3618439.cc \
    CDF_2000_S4155203.cc \
    CDF_2000_S4266730.cc \
    CDF_2001_S4517016.cc \
    CDF_2001_S4751469.cc \
    CDF_2002_S4796047.cc \
    CDF_2004_S5839831.cc \
    CDF_2005_S6080774.cc \
    CDF_2005_S6217184.cc \
    CDF_2006_S6450792.cc \
    CDF_2006_S6653332.cc \
    CDF_2007_S7057202.cc \
    CDF_2008_S7540469.cc \
    CDF_2008_S7541902.cc \
    CDF_2008_S7782535.cc \
    CDF_2008_S7828950.cc \
    CDF_2008_S8093652.cc \
    CDF_2008_S8095620.cc \
    CDF_2009_S8233977.cc \
    CDF_2009_I856131.cc \
    CDF_2009_S8436959.cc \
    CDF_2010_S8591881_DY.cc \
    CDF_2010_S8591881_QCD.cc \
    CDF_2012_I1124333.cc \
    CDF_2015_1388868.cc
# PRELIMINARY
CDF_ALL += \
    CDF_2009_NOTE_9936.cc \
    CDF_2012_NOTE10874.cc
# UNVALIDATED
CDF_ALL += \
    CDF_1993_S2742446.cc \
    CDF_1996_S3108457.cc \
    CDF_1996_S3349578.cc \
    CDF_1997_S3541940.cc \
    CDF_2001_S4563131.cc


lib_LTLIBRARIES += RivetD0Analyses.la

nodist_RivetD0Analyses_la_SOURCES = D0__all.cc
BUILT_SOURCES += D0__all.cc
DISTCLEANFILES += D0__all.cc

D0__all.cc : $(D0_ALL)

EXTRA_DIST += $(D0_ALL)



D0_ALL = \
    D0_1995_I398175.cc \
    D0_2000_I499943.cc \
    D0_2000_S4480767.cc \
    D0_2001_S4674421.cc \
    D0_2004_S5992206.cc \
    D0_2006_S6438750.cc \
    D0_2007_S7075677.cc \
    D0_2008_S6879055.cc \
    D0_2008_S7554427.cc \
    D0_2008_S7662670.cc \
    D0_2008_S7719523.cc \
    D0_2008_S7837160.cc \
    D0_2008_S7863608.cc \
    D0_2009_S8202443.cc \
    D0_2009_S8320160.cc \
    D0_2009_S8349509.cc \
    D0_2010_S8566488.cc \
    D0_2010_S8570965.cc \
    D0_2010_S8671338.cc \
    D0_2010_S8821313.cc \
    D0_2011_I895662.cc \
    D0_2015_I1324946.cc \
    D0_2000_I503361.cc
# UNVALIDATED
D0_ALL += \
    D0_1996_S3214044.cc \
    D0_1996_S3324664.cc


lib_LTLIBRARIES += RivetHERAAnalyses.la

nodist_RivetHERAAnalyses_la_SOURCES = HERA__all.cc
BUILT_SOURCES += HERA__all.cc
DISTCLEANFILES += HERA__all.cc

HERA__all.cc : $(HERA_ALL)

EXTRA_DIST += $(HERA_ALL)



HERA_ALL = \
    H1_1994_S2919893.cc \
    H1_2000_S4129130.cc \
    ZEUS_2001_S4815815.cc
# UNVALIDATED
HERA_ALL += \
    H1_1995_S3167097.cc



lib_LTLIBRARIES += RivetPetraAnalyses.la

nodist_RivetPetraAnalyses_la_SOURCES = Petra__all.cc
BUILT_SOURCES += Petra__all.cc
DISTCLEANFILES += Petra__all.cc

Petra__all.cc : $(Petra_ALL)

EXTRA_DIST += $(Petra_ALL)

Petra_ALL = \
    JADE_1983_I190818.cc \
    JADE_1998_S3612880.cc \
    PLUTO_1980_I154270.cc \
    TASSO_1989_I277658.cc \
    TASSO_1990_S2148048.cc

lib_LTLIBRARIES += RivetLEPAnalyses.la

nodist_RivetLEPAnalyses_la_SOURCES = LEP__all.cc
BUILT_SOURCES += LEP__all.cc
DISTCLEANFILES += LEP__all.cc

LEP__all.cc : $(LEP_ALL)

EXTRA_DIST += $(LEP_ALL)



LEP_ALL = \
    ALEPH_1991_S2435284.cc \
    ALEPH_1995_I382179.cc \
    ALEPH_1996_S3486095.cc \
    ALEPH_1996_S3196992.cc \
    ALEPH_1999_S4193598.cc \
    ALEPH_2001_S4656318.cc \
    ALEPH_2002_S4823664.cc \
    ALEPH_2004_S5765862.cc \
    ALEPH_2014_I1267648.cc \
    ALEPH_2016_I1492968.cc \
    DELPHI_1991_I301657.cc \
    DELPHI_1995_S3137023.cc \
    DELPHI_1996_S3430090.cc \
    DELPHI_1999_S3960137.cc \
    DELPHI_2000_S4328825.cc \
    DELPHI_2011_I890503.cc \
    L3_1992_I336180.cc \
    L3_2004_I652683.cc \
    OPAL_1992_I321190.cc \
    OPAL_1993_I342766.cc \
    OPAL_1994_S2927284.cc \
    OPAL_1995_S3198391.cc \
    OPAL_1996_S3257789.cc \
    OPAL_1997_S3396100.cc \
    OPAL_1997_S3608263.cc \
    OPAL_1998_S3702294.cc \
    OPAL_1998_S3749908.cc \
    OPAL_1998_S3780481.cc \
    OPAL_2000_S4418603.cc \
    OPAL_2001_S4553896.cc \
    OPAL_2002_S5361494.cc \
    OPAL_2003_I599181.cc \
    OPAL_2004_S6132243.cc \
    OPAL_2004_I631361.cc \
    OPAL_2004_I631361_qq.cc \
    OPAL_2004_I648738.cc \
    SLD_1996_S3398250.cc \
    SLD_1999_S3743934.cc \
    SLD_2002_S4869273.cc \
    SLD_2004_S5693039.cc
# UNVALIDATED
LEP_ALL += \
    OPAL_1993_S2692198.cc
# OBSOLETE
LEP_ALL += \
    DELPHI_2002_069_CONF_603.cc


lib_LTLIBRARIES += RivetRHICAnalyses.la

nodist_RivetRHICAnalyses_la_SOURCES = RHIC__all.cc
BUILT_SOURCES += RHIC__all.cc
DISTCLEANFILES += RHIC__all.cc

RHIC__all.cc : $(RHIC_ALL)

EXTRA_DIST += $(RHIC_ALL)



RHIC_ALL = \
    STAR_2006_S6500200.cc \
    STAR_2006_S6860818.cc \
    STAR_2006_S6870392.cc
# PRELIMINARY
RHIC_ALL += \
    STAR_2009_UE_HELEN.cc
# UNVALIDATED
RHIC_ALL += \
    STAR_2008_S7869363.cc \
    STAR_2008_S7993412.cc


lib_LTLIBRARIES += RivetSPSAnalyses.la

nodist_RivetSPSAnalyses_la_SOURCES = SPS__all.cc
BUILT_SOURCES += SPS__all.cc
DISTCLEANFILES += SPS__all.cc

SPS__all.cc : $(SPS_ALL)

EXTRA_DIST += $(SPS_ALL)



SPS_ALL = \
    UA1_1990_S2044935.cc \
    UA5_1982_S875503.cc \
    UA5_1986_S1583476.cc \
    UA5_1987_S1640666.cc \
    UA5_1988_S1867512.cc \
    UA5_1989_S1926373.cc


lib_LTLIBRARIES += RivetMiscAnalyses.la

nodist_RivetMiscAnalyses_la_SOURCES = Misc__all.cc
BUILT_SOURCES += Misc__all.cc
DISTCLEANFILES += Misc__all.cc

Misc__all.cc : $(Misc_ALL)

EXTRA_DIST += $(Misc_ALL)



Misc_ALL = \
    E735_1998_S3905616.cc \
    EHS_1988_I265504.cc \
    PDG_HADRON_MULTIPLICITIES.cc \
    PDG_HADRON_MULTIPLICITIES_RATIOS.cc \
    PDG_TAUS.cc \
    JADE_OPAL_2000_S4300807.cc \
    ARGUS_1993_S2653028.cc \
    ARGUS_1993_S2669951.cc \
    ARGUS_1993_S2789213.cc \
    BABAR_2003_I593379.cc \
    BABAR_2005_S6181155.cc \
    BABAR_2007_S6895344.cc \
    BABAR_2007_S7266081.cc \
    BABAR_2013_I1116411.cc \
    BABAR_2013_I1238276.cc \
    BABAR_2015_I1334693.cc \
    BELLE_2001_S4598261.cc \
    BELLE_2008_I786560.cc \
    BELLE_2011_I878990.cc \
    BELLE_2013_I1216515.cc \
    BELLE_2013_I1238273.cc \
    BELLE_2015_I1397632.cc \
    BELLE_2017_I1512299.cc\
    CLEO_2004_S5809304.cc \
    AMY_1990_I295160.cc \
    HRS_1986_I18502.cc \
    TPC_1987_I235694.cc
# UNVALIDATED
Misc_ALL += \
    SFM_1984_S1178091.cc


lib_LTLIBRARIES += RivetMCAnalyses.la

nodist_RivetMCAnalyses_la_SOURCES = MC__all.cc
BUILT_SOURCES += MC__all.cc
DISTCLEANFILES += MC__all.cc

MC__all.cc : $(MC_ALL)

EXTRA_DIST += $(MC_ALL)



MC_ALL = \
    EXAMPLE.cc \
    EXAMPLE_CUTS.cc \
    EXAMPLE_SMEAR.cc \
    MC_QCD_PARTONS.cc \
    MC_DIPHOTON.cc \
    MC_ELECTRONS.cc \
    MC_GENERIC.cc \
    MC_HINC.cc \
    MC_HJETS.cc \
    MC_HHJETS.cc \
    MC_HKTSPLITTINGS.cc \
    MC_IDENTIFIED.cc \
    MC_JETS.cc \
    MC_JETTAGS.cc \
    MC_KTSPLITTINGS.cc \
    MC_HFJETS.cc \
    MC_LEADJETUE.cc \
    MC_MET.cc \
    MC_MUONS.cc \
    MC_PDFS.cc \
    MC_PHOTONINC.cc \
    MC_PHOTONJETS.cc \
    MC_PHOTONKTSPLITTINGS.cc \
    MC_PHOTONS.cc \
    MC_PRINTEVENT.cc \
    MC_SUSY.cc \
    MC_TTBAR.cc \
    MC_TAUS.cc \
    MC_VH2BB.cc \
    MC_WINC.cc \
    MC_WJETS.cc \
    MC_WKTSPLITTINGS.cc \
    MC_WPOL.cc \
    MC_WWINC.cc \
    MC_WWJETS.cc \
    MC_WWKTSPLITTINGS.cc \
    MC_XS.cc \
    MC_ZINC.cc \
    MC_ZJETS.cc \
    MC_ZKTSPLITTINGS.cc \
    MC_ZZINC.cc \
    MC_ZZJETS.cc \
    MC_ZZKTSPLITTINGS.cc

endif
