noinst_LTLIBRARIES = libRivetProjections.la
libRivetProjections_la_SOURCES = \
  Beam.cc \
  ChargedFinalState.cc \
  ChargedLeptons.cc \
  CentralEtHCM.cc \
  ClusteredPhotons.cc \
  DISKinematics.cc \
  DISLepton.cc \
  D0ILConeJets.cc \
  FastJets.cc \
  FinalState.cc \
  FinalStateHCM.cc \
  HadronicFinalState.cc \
  Hemispheres.cc \
  IdentifiedFinalState.cc \
  InitialQuarks.cc \
  InvMassFinalState.cc \
  JetShape.cc \
  LeadingParticlesFinalState.cc \
  LossyFinalState.cc \
  Multiplicity.cc \
  ParisiTensor.cc \
  PVertex.cc \
  Sphericity.cc \
  SVertex.cc \
  Thrust.cc \
  TotalVisibleMomentum.cc \
  TrackJet.cc \
  UnstableFinalState.cc \
  VetoedFinalState.cc \
  ZFinder.cc

## TODO: remove, or -> HAVE_FJDURHAM
AM_CXXFLAGS += -DHAVE_JADE
