noinst_LTLIBRARIES = libRivetProjections.la
libRivetProjections_la_SOURCES = \
  Beam.cc \
  ChargedFinalState.cc \
  ChargedLeptons.cc \
  CentralEtHCM.cc \
  ClusteredPhotons.cc \
  DISKinematics.cc \
  DISLepton.cc \
  FastJets.cc \
  FinalState.cc \
  FinalStateHCM.cc \
  FoxWolframMoments.cc \
  HadronicFinalState.cc \
  Hemispheres.cc \
  IdentifiedFinalState.cc \
  InitialQuarks.cc \
  InvMassFinalState.cc \
  JetAlg.cc \
  JetShape.cc \
  LeadingParticlesFinalState.cc \
  LossyFinalState.cc \
  Multiplicity.cc \
  ParisiTensor.cc \
  PVertex.cc \
  Sphericity.cc \
  SVertex.cc \
  Thrust.cc \
  TotalVisibleMomentum.cc \
  TriggerCDFRun0Run1.cc \
  TriggerUA5.cc \
  UnstableFinalState.cc \
  VetoedFinalState.cc \
  VisibleFinalState.cc \
  WFinder.cc \
  ZFinder.cc
