noinst_LTLIBRARIES = libRivetProjections.la
libRivetProjections_la_SOURCES = \
  Beam.cc \
  BeamThrust.cc \
  ChargedFinalState.cc \
  ChargedLeptons.cc \
  CentralEtHCM.cc \
  ClusteredPhotons.cc \
  DISFinalState.cc \
  DISKinematics.cc \
  DISLepton.cc \
  FastJets.cc \
  FinalState.cc \
  FoxWolframMoments.cc \
  FParameter.cc \
  HadronicFinalState.cc \
  HeavyHadrons.cc \
  Hemispheres.cc \
  IdentifiedFinalState.cc \
  InitialQuarks.cc \
  InvMassFinalState.cc \
  JetAlg.cc \
  JetShape.cc \
  LeadingParticlesFinalState.cc \
  LeptonClusters.cc \
  MergedFinalState.cc \
  MissingMomentum.cc \
  Multiplicity.cc \
  NeutralFinalState.cc \
  NonHadronicFinalState.cc \
  ParisiTensor.cc \
  PrimaryHadrons.cc \
  Sphericity.cc \
  Spherocity.cc \
  Thrust.cc \
  TriggerCDFRun0Run1.cc \
  TriggerCDFRun2.cc \
  TriggerUA5.cc \
  UnstableFinalState.cc \
  VetoedFinalState.cc \
  VisibleFinalState.cc \
  WFinder.cc \
  ZFinder.cc
