#ATOOLSFLAGS   =	# -pedantic -Wall -Winline
#ATOOLSINCS    =	-I../Org -I../Phys
#MODELINCS     =	-I$(SHERPASYS)/MODEL-1.0.8/Main 

lib_LTLIBRARIES       =	libSherpaMath.la libSherpaObservables.la
libSherpaMath_la_SOURCES = Math/Vector.C Math/Matrix.C Math/MathTools.C
# Random.C \
# Function_Base.C \
# Poincare.C \
# Fast_Function.C \
# Gauss_Integrator.C \
# Scaling.C \
# Axis.C \
# Histogram.C \
# Variable.C \
# Permutation.C \
# Grid.C \
# Primitive_Integrator.C \
# Algebra_Interpreter.C
pkginclude_HEADERS = Math/MathTools.H Math/Vector.H Math/Matrix.H 
# Random.H \
# Function_Base.H \
# Poincare.H \
# MyComplex.H \
# Fast_Function.H \
# Gauss_Integrator.H \
# Histogram.H \
# Variable.H \
# Scaling.H \
# Axis.H \
# Histogram.H \
# Permutation.H \
# Grid.H \
# Primitive_Integrator.H \
# Algebra_Interpreter.H \
# Cluster_Algorithm.H \
# Cluster_Algorithm.C

libSherpaObservables_la_SOURCES = Observables/Event_Shapes_EE.C
# HT.C \
# PSM_Observables.C \
# Multiplicity.C \
# Statistics_Observable.C \
# One_Particle_Selector.C \
# One_Particle_Extractor.C \
# All_Particle_Selector.C \
# Universal_Selector.C \
# MI_Observables.C \
# ISR_Statistics.C \
# Shower_Statistics.C \
# SV_Statistics.C \
# One_Particle_Observables.C \
# Two_Particle_Observables.C \
# Three_Particle_Observables.C \
# Four_Particle_Observables.C \
# Midpoint_Cone.C \
# Calorimeter_Cone.C \
# Jet_Cone_Distribution.C \
# Jet_Observables.C \
# Momentum_Tensor.C \
# CD_Parameters.C \
# Sphericity_Observables.C \
# Event_Shapes_EE.C \
# Shape_Observables_EE.C \
# Jet_Mass_and_Broadening.C \
# Scaled_Observables.C \
# Four_Jet_Angles.C \
# Field_Stuart_Cone_Finder.C \
# Blob_Selector.C 

pkginclude_HEADERS += Observables/Event_Shapes_EE.H
# HT.H \
# PSM_Observables.H \
# Multiplicity.H \
# Statistics_Observable.H \
# One_Particle_Selector.H \
# One_Particle_Extractor.H \
# All_Particle_Selector.H \
# Universal_Selector.H \
# MI_Observables.H \
# ISR_Statistics.H \
# Shower_Statistics.H \
# One_Particle_Observables.H \
# Two_Particle_Observables.H \
# Three_Particle_Observables.H \
# Four_Particle_Observables.H \
# Midpoint_Cone.H \
# Calorimeter_Cone.H \
# Jet_Cone_Distribution.H \
# Jet_Observables.H \
# Momentum_Tensor.H \
# CD_Parameters.H \
# Sphericity_Observables.H \
# Shape_Observables_EE.H \
# Jet_Mass_and_Broadening.H \
# Scaled_Observables.H \
# Four_Jet_Angles.H
