lib_LTLIBRARIES = RivetCDFAnalyses.la

RivetCDFAnalyses_la_SOURCES = \
    CDF_1988_S1865951.cc \
    CDF_1990_S2089246.cc \
    CDF_1994_S2952106.cc \
    CDF_2000_S4155203.cc \
    CDF_2001_S4751469.cc \
    CDF_2002_S4796047.cc \
    CDF_2004_S5839831.cc \
    CDF_2005_S6080774.cc \
    CDF_2005_S6217184.cc \
    CDF_2006_S6450792.cc \
    CDF_2006_S6653332.cc \
    CDF_2007_S7057202.cc \
    CDF_2008_S7541902.cc \
    CDF_2008_NOTE_9351.cc \
    CDF_2008_LEADINGJETS.cc \
    CDF_2008_S7540469.cc \
    CDF_2008_S7782535.cc \
    CDF_2008_S7828950.cc \
    CDF_2008_S8093652.cc \
    CDF_2008_S8095620.cc \
    CDF_2009_S8233977.cc

## Flags for building all plugins
AM_LDFLAGS = $(LDFLAGS) -module -L$(FASTJETLIBPATH)
LIBS = -lCDFConesPlugin -lSISConePlugin -lsiscone -lJadePlugin
